AI working on my phone, not working on emulator for some reason