@@ -10,55 +10,56 @@ import java.io.BufferedReader;
 import java.util.Scanner;
 
 public class GameState
-{		
+{
 	public int gameStatus = 0; // -1 = game over, 0 = normal, 1 = win
 
-	protected Map map; 
+	protected Map map;
 	public int player = 0;
 	public boolean gameOver = false;
 	public int winner = 2;
 
 	private boolean singlePlayer;
-	private Runtime runtime;
+	private String stockfishPath;
+
 	private Process stockfish;
 	private BufferedReader reader;
 	private BufferedWriter writer;
-	private Scanner scanner;
 
 	private ArrayList<String> moves;
 
-	public GameState(boolean singlePlayer) throws IOException
+	public GameState(boolean singlePlayer, String stockfishPath)
 	{
 		map = new Map();
 		this.singlePlayer = singlePlayer;
+		this.stockfishPath = stockfishPath;
 
 		if (singlePlayer)
 		{
-//			ProcessBuilder ola = new ProcessBuilder("stockfish");
-//			stockfish = ola.start();
+			try
+			{
+				stockfish = Runtime.getRuntime().exec(stockfishPath);
+				reader = new BufferedReader(new InputStreamReader(stockfish.getInputStream()));
+				writer = new BufferedWriter(new OutputStreamWriter(stockfish.getOutputStream()));
 
-			//stockfish = Runtime.getRuntime().exec("/Users/ff/Desktop/LPOO/IntelliJP/android/assets/stockfish");
-			stockfish = Runtime.getRuntime().exec("stockfish");
+				moves = new ArrayList<String>();
 
+				String foobar = "uci";
+				foobar += "\nucinewgame";
+				foobar += "\nisready\n";
 
-			reader = new BufferedReader(new InputStreamReader(stockfish.getInputStream()));
-			writer = new BufferedWriter(new OutputStreamWriter(stockfish.getOutputStream()));
+				writer.write(foobar, 0, foobar.length());
+				writer.flush();
 
-			moves = new ArrayList<String>();
-
-			String foobar = "uci";
-			foobar += "\nucinewgame";
-			foobar += "\nisready\n";
-
-			writer.write(foobar, 0, foobar.length());
-			writer.flush();
-
-			printAIAnswer();
+				printAIAnswer();
+			}
+			catch (IOException e)
+			{
+				e.printStackTrace();
+			}
 		}
-
 	}
 
-	
+
 	public void update(int player, int x1, int y1, int x2, int y2)
 	{
 		if (gameStatus != 0)
@@ -70,16 +71,17 @@ public class GameState
 	{
 		move(map.getMap()[y1][x1], map.getMap()[y2][x2]);
 	}
-	
+
 	public void move(Character ch, int x, int y)
 	{
 		move(ch, map.getMap()[y][x]);
 	}
-	
+
 	public void move(Character ch1, Character ch2) // Moves ch1 to ch2
 	{
 		if (singlePlayer)
 			moves.add(getMoveSymbol(ch1, ch2));
+
 		map.move(ch1, ch2);
 
 		if (player == 0 && singlePlayer) {
@@ -102,38 +104,42 @@ public class GameState
 		move(x1, y1, x2, y2);
 	}
 
-	private void printBoard()
+	private void printAIBoard() throws IOException
 	{
-
 		String foobar = "d\n";
 
-		try {
-			writer.write(foobar, 0, foobar.length());
-			writer.flush();
-		} catch (IOException e) {
-			e.printStackTrace();
-		}
+		writer.write(foobar, 0, foobar.length());
+		writer.flush();
 
+		printAIAnswer();
 	}
 
 	private void updateAIBoard() throws IOException
 	{
 		String foobar = "position startpos moves";
 
-		for (int i = 0; i < moves.size(); i++)
-		{
+		for (int i = 0; i < moves.size(); i++) {
 			foobar += " " + moves.get(i);
 		}
-		foobar += "\ngo\nd\n";
-
+		foobar += "\n";
 
 		writer.write(foobar, 0, foobar.length());
 		writer.flush();
 	}
- 	
-	private void moveAI() throws IOException {
 
+	public void goAI() throws IOException
+	{
+		String foobar = "go\n";
+
+		writer.write(foobar, 0, foobar.length());
+		writer.flush();
+	}
+
+	private void moveAI() throws IOException
+	{
 		updateAIBoard();
+		goAI();
+
 
 		ArrayList<String> answer = getAIAnswer();
 
@@ -144,6 +150,9 @@ public class GameState
 		foobar = foobar.substring(9, 13);
 
 		move(foobar);
+
+		updateAIBoard();
+		printAIBoard();
 	}
 
 
@@ -200,12 +209,12 @@ public class GameState
 
 		return str;
 	}
-	
+
 	public Map getMap()
 	{
 		return map;
 	}
-	
+
 	public int otherPlayer()
 	{
 		if (player == 0)
@@ -233,7 +242,7 @@ public class GameState
 			for (int j = 0; j < this.getMap().getMap()[i].length; j++)
 			{
 				Character ch = this.getMap().getMap()[j][i];
-				
+
 				if (ch.getPlayer() == 0)
 				{
 					if (ch.getChar() == 'p' && ch.getPos().getSecond() == 0)
@@ -291,11 +300,11 @@ public class GameState
 			}
 		}
 	}
-	
+
 	public void updateGameStatus() // Trata de ver se ha cheques e cheque-mates
 	{
 		Pair<Integer, Integer> kingPos = this.getMap().getKingsPosition(player);
-		
+
 		if (verifyCheck(otherPlayer(), kingPos))
 		{
 			this.getMap().getMap()[kingPos.getFirst()][kingPos.getSecond()].isCheck = true;
@@ -306,14 +315,14 @@ public class GameState
 				gameOver = true;
 			}
 		}
-		else 
+		else
 		{
 			this.getMap().getMap()[kingPos.getFirst()][kingPos.getSecond()].isCheck = false;
 		}
-	} 
-	
+	}
+
 	public boolean verifyCheck(int p, Pair<Integer, Integer> kingPos)
-	{ 
+	{
 		for (int i = 0; i < this.getMap().getMap().length; i++)
 		{
 			for (int j = 0; j < this.getMap().getMap()[i].length; j++)
@@ -329,7 +338,7 @@ public class GameState
 		}
 		return false;
 	}
-		
+
 	public boolean verifyCheckMate(int p, Pair<Integer, Integer> kingPos)
 	{
 		System.out.println(isKingCornered(p, kingPos) + "-" + isKingIndefensible(p, kingPos));
@@ -339,21 +348,21 @@ public class GameState
 		}
 		return false;
 	}
-	
+
 	public boolean isKingCornered(int p, Pair<Integer, Integer> kingPos) // True se o rei esta encurralado
 	{
 		HashMap<Pair<Integer, Integer>, Boolean> possibleMoves = new HashMap<Pair<Integer, Integer>, Boolean>();
-		 
+
 		for (int k = 0; k < trimGetPossible(this.getMap().getMap()[kingPos.getSecond()][kingPos.getFirst()], this.getMap().getMap()[kingPos.getSecond()][kingPos.getFirst()].getPossible(getMap())).size(); k++)
-		{ 
+		{
 			possibleMoves.put(this.getMap().getMap()[kingPos.getSecond()][kingPos.getFirst()].getPossible(getMap()).get(k), false);
 		}
-		
+
 		for (int i = 0; i < this.getMap().getMap().length; i++)
 		{
 			for (int j = 0; j < this.getMap().getMap()[i].length; j++) // Estes 2 loops percorrem o mapa
 			{
-				if (this.getMap().getMap()[j][i].getPossible(getMap()) != null) 
+				if (this.getMap().getMap()[j][i].getPossible(getMap()) != null)
 				{
 					for (HashMap.Entry<Pair<Integer, Integer>, Boolean> entry : possibleMoves.entrySet()) // Percorre os moves possiveis do rei em check
 					{
@@ -365,7 +374,7 @@ public class GameState
 				}
 			}
 		}
-		
+
 		for (HashMap.Entry<Pair<Integer, Integer>, Boolean> entry : possibleMoves.entrySet())
 		{
 			if (entry.getValue() == false)
@@ -376,27 +385,27 @@ public class GameState
 		}
 		return true;
 	}
-	
+
 	public boolean isKingIndefensible(int p, Pair<Integer, Integer> kingPos) // True se nenhuma peca conseguir evitar o cheque mate
 	{
 		for (int i = 0; i < this.getMap().getMap().length; i++)
 		{
 			for (int j = 0; j < this.getMap().getMap()[i].length; j++) // Estes 2 loops percorrem o mapa
 			{
-				if (this.getMap().getMap()[j][i].getPossible(getMap()) != null && this.getMap().getMap()[j][i].getPlayer() == player && this.getMap().getMap()[j][i].getChar() != 'K')  
+				if (this.getMap().getMap()[j][i].getPossible(getMap()) != null && this.getMap().getMap()[j][i].getPlayer() == player && this.getMap().getMap()[j][i].getChar() != 'K')
 				{
 					ArrayList<Pair<Integer, Integer>> arr = this.getMap().getMap()[j][i].getPossible(getMap());
-					
+
 					for (int k = 0 ; k < arr.size(); k++)
 					{
 						int xt = arr.get(k).getFirst(), yt = arr.get(k).getSecond();
-						
+
 						Character temp = this.getMap().getMap()[yt][xt];
 						Character ch = this.getMap().getMap()[j][i];
-						
+
 						this.getMap().getMap()[j][i] = new Floor();
-						this.getMap().getMap()[yt][xt] = ch; 
-						
+						this.getMap().getMap()[yt][xt] = ch;
+
 						if (!verifyCheck(otherPlayer(), kingPos))
 						{
 							this.getMap().getMap()[j][i] = ch;
@@ -410,10 +419,10 @@ public class GameState
 				}
 			}
 		}
-		
+
 		return true;
 	}
-		
+
 	public ArrayList<Pair<Integer, Integer>> trimGetPossible(Character ch, ArrayList<Pair<Integer, Integer>> arr)
 	{
 		if (ch.getChar() == 'K') // O rei nao pode movimentar-se para um eventual check
@@ -424,16 +433,16 @@ public class GameState
 				Pair<Integer, Integer> kingPos = arr.get(i);
 				int xt = arr.get(i).getFirst(), yt = arr.get(i).getSecond();
 				Character temp = this.getMap().getMap()[yt][xt];
-				
+
 				this.getMap().getMap()[y][x] = new Floor();
-				this.getMap().getMap()[yt][xt] = ch; 
-				
+				this.getMap().getMap()[yt][xt] = ch;
+
 				if (verifyCheck(otherPlayer(), kingPos))
 				{
 					arr.remove(i);
 					i--;
-				}	
-				
+				}
+
 				this.getMap().getMap()[y][x] = ch;
 				this.getMap().getMap()[yt][xt] = temp;
 			}
@@ -533,15 +542,15 @@ public class GameState
 		{
 			int x = ch.getPos().getFirst(), y = ch.getPos().getSecond();
 			Pair<Integer, Integer> kingPos = this.getMap().getKingsPosition(player);
-			
+
 			for (int i = 0; i < arr.size(); i++)
-			{		
+			{
 				int xt = arr.get(i).getFirst(), yt = arr.get(i).getSecond();
 				Character temp = this.getMap().getMap()[yt][xt];
-				
+
 				this.getMap().getMap()[y][x] = new Floor();
-				this.getMap().getMap()[yt][xt] = ch; 
-				
+				this.getMap().getMap()[yt][xt] = ch;
+
 				if (verifyCheck(otherPlayer(), kingPos))
 				{
 					arr.remove(i);
@@ -550,9 +559,9 @@ public class GameState
 				this.getMap().getMap()[y][x] = ch;
 				this.getMap().getMap()[yt][xt] = temp;
 			}
-			
+
 		}
-		 
+
 		return arr;
 	}
 
